# m2master

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  go.mod  go.sum  m2pwd.go
config/: config.go.in
front/src/: index.html
front/src/app/: agent.service.ts  app.component.ts  app.module.ts  db.service.ts  dump-schedule.service.ts  page.guard.ts  routing.module.ts  schedule.service.ts  store.service.ts  user.service.ts
front/src/app/agent-create/: agent-create.component.html  agent-create.component.ts
front/src/app/agent-delete/: agent-delete.component.html  agent-delete.component.ts
front/src/app/agent-option/: agent-option.component.html  agent-option.component.ts
front/src/app/agent-update/: agent-update.component.html  agent-update.component.ts
front/src/app/agents/: agents.component.html  agents.component.ts
front/src/app/dump-schedule-create/: dump-schedule-create.component.html  dump-schedule-create.component.ts
front/src/app/dump-schedule-delete/: dump-schedule-delete.component.ts
front/src/app/dump-schedule-option/: dump-schedule-option.component.html  (+1 more)
public/: index.html  main.js  polyfills-es5.js  polyfills.js  scripts.js  styles.js
server/: server.go
server/agent-client/: agent_client.go  agent_client_test.go
server/agent-controller/: agent_controller.go  agent_controller_test.go
server/agent-model/: agent_model.go  agent_model_test.go
server/db-controller/: db_controller.go
server/dbuser-controller/: dbuser_controller.go
server/dump-schedule-controller/: dump_schedule_controller.go  dump_schedule_controller_test.go
server/dump-schedule-model/: dump_schedule_model.go  dump_schedule_model_test.go
server/job-model/: agent_model.go  agent_model_test.go
server/runner-model/: runner_model.go  runner_model_test.go
server/schedule-controller/: schedule_controller.go  schedule_controller_test.go
server/schedule-model/: schedule_model.go  schedule_model_test.go
server/store-controller/: store_controller.go  store_controller_test.go
server/store-model/: store_model.go  store_model_test.go
server/user-controller/: user_controller.go
server/user-model/: user_model.go  user_model_test.go
(+35 files in other folders)
